paper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paper
  annotations:
    tailscale.com/hostname: lepinoid-paper
    tailscale.com/tags: "tag:mcserver"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: paper
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
      protocol: TCP
